// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> it should render a danger alert 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #f6bcc2;
  border-color: #f08f99;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is a 
    danger
     alert 
  </div>
</div>
`;

exports[`<Alert /> it should render a info alert 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #d7e8f9;
  border-color: #abcff2;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is a 
    info
     alert 
  </div>
</div>
`;

exports[`<Alert /> it should render a primary alert 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #fff;
  background: #005994;
  border-color: #003a61;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is a 
    primary
     alert 
  </div>
</div>
`;

exports[`<Alert /> it should render a secondary alert 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #d1d1d1;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is a 
    secondary
     alert 
  </div>
</div>
`;

exports[`<Alert /> it should render a success alert 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #e0f2bd;
  border-color: #ccea92;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is a 
    success
     alert 
  </div>
</div>
`;

exports[`<Alert /> it should render a warning alert 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #fee5ad;
  border-color: #fdd57b;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is a 
    warning
     alert 
  </div>
</div>
`;

exports[`<Alert /> should render 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    this is an alert 
  </div>
</div>
`;
